@@ -1,3 +1,5 @@
+* Campaigns Out: modify CSV report of completed calls to add Uniqueid and all
+  attributes defined for each call.
 * Campaigns Out: previous fix for new campaign selection broke on old 
   Elastix versions. Fix it properly for all Elastix versions.
 * Dialer: Handle Bridge event fired by Asterisk 1.6.2.x instead of Link
